[package]
name = "signalling-server"
version = "0.1.0"
authors = ["dvvvvvv <dvvvvvv@dvvvvvv.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "^1.0.0"
actix-web-actors = "2.0.0"
actix = "0.9.0"
serde = "1"
serde_json = "1"
uuid = { version = "0.8.1", features = ["v4"] }
futures = "0.3.1"

